--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,8 @@ font-family: "Roboto", "Helvetica", "Sans-serif";
 
 
 
+
+
 /* headings */
 .review-heading {
     padding-bottom: 75px;
@@ -101,6 +103,17 @@ h5 {
     font-family: "Playfair Display", serif;
 }
 
+
+header ul li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+.heading-blue {
+    color: #042f4b;
+}
+
+/* p , text , captions*/
 p {
     color: #585756;
     margin: 0 0 1rem;
@@ -119,16 +132,8 @@ p.large-paragraph {
     font-weight: 300;
 }
 
-header ul li {
-    display: inline-block;
-    margin: 0 15px;
-}
-
-.heading-blue {
-    color: #042f4b;
-}
-
 /* buttons*/
+
 button.rounded {
     background: #042f4b;
     border: none;
@@ -141,88 +146,7 @@ button.rounded {
     
 }
 
-#the-best {
-    padding: 80px 60px;
-}
-
-#the-best .flex > img {
-    width: 47%;
-}
-
-#the-best .flex > div {
-    width: 40%;
-}
-
-#the-best ul {
-    padding-left: 20px;
-    margin-bottom: 4rem;
-}
-
-#the-best ul li {
-    margin: 10px 0;
-}
-
- /* navbar*/
-.navbar-nav a{
-    font-family: sans-serif;
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 500;
-}
-
-.navbar-dark .navbar-brand {
-    color: #fff;
-    font-weight: 800;
-    letter-spacing: 0.5rem;;
-}
-
-.bg-dark {
-    transition: 0.5s ease;
-    background: transparent !important;
-}
-
-.bg-dark.scrolled {
-  background: #042f4b !important;
-}
-
-.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active,
-.navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
-    color: #fff;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: #fff;
-}
-
-.navbar-nav {
-    text-align: center;
-}
-
-.nav-link {
-    padding: .2rem 1rem;
-}
-
-.nav-link.active, .nav-link:focus {
-    color: #fff !important;
-}
-
-.w-100{
-    height: 100vh;
-}
-/*media*/
-@media only screen and (max-width: 767px;){
-    .navbar-nav.ml-auto{
-        background: rgba(0, 0, 0, 0.5);
-    }
-    .navbar-toggler{
-        padding: 1px 5px;
-        font-size: 18px;
-        line-height: 0.3;
-        background: #fff;
-    }
-}
-
-/*features*/
+/*What we do */
 
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 section{
@@ -302,6 +226,93 @@ section .section-title{
 	-moz-transition: .5s all ease;
 	transition: .5s all ease;
 }
+
+/* The best styles*/
+
+#the-best {
+    padding: 80px 60px;
+}
+
+#the-best .flex > img {
+    width: 47%;
+}
+
+#the-best .flex > div {
+    width: 40%;
+}
+
+#the-best ul {
+    padding-left: 20px;
+    margin-bottom: 4rem;
+}
+
+#the-best ul li {
+    margin: 10px 0;
+}
+
+ /* navbar*/
+.navbar-nav a{
+    font-family: sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.navbar-dark .navbar-brand {
+    color: #fff;
+    font-weight: 800;
+    letter-spacing: 0.5rem;;
+}
+
+.bg-dark {
+    transition: 0.5s ease;
+    background: transparent !important;
+}
+
+.bg-dark.scrolled {
+  background: #042f4b !important;
+}
+
+.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
+    color: #fff;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: #fff;
+}
+
+.navbar-nav {
+    text-align: center;
+}
+
+.nav-link {
+    padding: .2rem 1rem;
+}
+
+.nav-link.active, .nav-link:focus {
+    color: #fff !important;
+}
+
+.w-100{
+    height: 100vh;
+}
+
+/*media*/
+
+@media only screen and (max-width: 767px;){
+    .navbar-nav.ml-auto{
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .navbar-toggler{
+        padding: 1px 5px;
+        font-size: 18px;
+        line-height: 0.3;
+        background: #fff;
+    }
+}
+
+
 
 /*Contact*/
 
