adding main image

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ font-family: "Roboto", "Helvetica", "Sans-serif";
     line-height: 1.7;
 }
 .callout{
-    background: url('../images/mk5g.jpeg') center center no-repeat;
+    background: url('../images/daily1.jpeg') center center no-repeat;
     background-size: cover;
     position: relative;
     top: 0;
