--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ font-family: "Roboto", "Helvetica", "Sans-serif";
     font-weight: 400;
     color: #777;
     line-height: 1.7;
+    position: relative;
 }
 .callout{
     background: url('../images/daily1.jpeg') center center no-repeat;
@@ -346,6 +347,14 @@ section .section-title{
     height: 100vh;
 }
 
+.navbar-dark .navbar-nav .nav-link:hover {
+border-bottom: 2px solid #fff;
+}
+
+.active {
+    border-bottom: 2px solid #fff;
+}
+
 /*media*/
 
 @media only screen and (max-width: 767px;){
@@ -419,3 +428,6 @@ section .section-title{
   text-decoration: none;
     
 }
+
+/* scroll down */
+
