--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ background: url('../images/mountain.jpeg') center center no-repeat fixed;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.container {
+.container-1 {
     max-width: 1140px;
     margin: 0 auto;
     padding: 0 20px;
@@ -404,7 +404,7 @@ a.box_btn::before {
 	top: 0;
 	-webkit-transition: .5s;
 	transition: .5s;
-	z-index: -1;
+	z-index: 0;
 }
 a.box_btn {
 	overflow: hidden;
@@ -416,7 +416,7 @@ a.box_btn {
 }
 a.box_btn:hover::before {
 	left: 0;
-	z-index: -1;
+	z-index: 0;
 }
 
  /* navbar*/
@@ -481,56 +481,7 @@ border-bottom: 2px solid #fff;
 
 /*Contact*/
 
-
-#contact{
-  background-color: #042f4b;
-  letter-spacing: 2px;
-  }
-#contact a{
-  color: #fff;
-  text-decoration: none;
-}
-
 /* media quries */
-@media (max-width: 575.98px) {
-
-  #contact{padding-bottom: 800px;}
-  #contact .maps iframe{
-    width: 100%;
-    height: 450px;
-  }
- }
-
-
-@media (min-width: 576px) {
-
-   #contact{padding-bottom: 800px;}
-
-   #contact .maps iframe{
-     width: 100%;
-     height: 450px;
-   }
- }
-
-@media (min-width: 768px) {
-
-  #contact{padding-bottom: 350px;}
-
-  #contact .maps iframe{
-    width: 100%;
-    height: 850px;
-  }
-}
-
-@media (min-width: 992px) {
-  #contact{padding-bottom: 200px;}
-
-   #contact .maps iframe{
-     width: 100%;
-     height: 700px;
-   }
-}
- 
 
  @media (max-width:576px ) {
 
