adding smallier image for callout

--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,12 @@ a{
   }
  }
 
+@media (max-width:576px ) {
+
+  .callout{
+      background-image: url('../images/daily1_small.jpg')
+  }
+ }
 
 
 
