--- a/css/styles.css
+++ b/css/styles.css
@@ -539,7 +539,15 @@ a{
 @media (max-width:576px ) {
 
   .callout{
-      background-image: url('../images/daily1_small.jpg')
+      background-image: url('../images/daily1_small.jpg');
+      background-size: cover;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 100vh;
+    width: 100%;
+    display: flex;
   }
  }
 
