--- a/css/styles.css
+++ b/css/styles.css
@@ -539,7 +539,7 @@ a{
 @media (max-width:576px ) {
 
   .callout{
-      background-image: url('../images/main2.jpeg');
+      background-image: url('../images/daily1_small.jpg');
       background-size: cover;
     position: relative;
     top: 0;
